--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: local
+    active: test
 
   datasource:
     url: jdbc:h2:tcp://localhost/~/querydsl
@@ -24,4 +24,3 @@ decorator:
   datasource:
     p6spy:
       enable-logging: true
-
